--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -53,7 +53,7 @@ leds {
 	};
 	watchdog_max: watchdog {
 		compatible = "linux,wdt-gpio";
-//		gpios = <&gpio3 21 GPIO_ACTIVE_LOW>;
+		gpios = <&gpio3 21 GPIO_ACTIVE_LOW>;
 		hw_algo = "toggle";
 		always-running;
 		hw_margin_ms = <900>;
