--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -164,30 +164,30 @@ leds {
 
 
 
-&gpio1{
-gpio-ranges=<&omap3_pmx_core 0 32>;
+/*&gpio1{*/
+/*gpio-ranges=<&omap3_pmx_core 0 32>;*/
 
-};
-&gpio2{
-gpio-ranges=<&omap3_pmx_core 32 32>;
+/*};*/
+/*&gpio2{*/
+/*gpio-ranges=<&omap3_pmx_core 32 32>;*/
 
-};
-&gpio3{
-gpio-ranges=<&omap3_pmx_core 64 32>;
+/*};*/
+/*&gpio3{*/
+/*gpio-ranges=<&omap3_pmx_core 64 32>;*/
 
-};
-&gpio4{
-gpio-ranges=<&omap3_pmx_core 96 32>;
+/*};*/
+/*&gpio4{*/
+/*gpio-ranges=<&omap3_pmx_core 96 32>;*/
 
-};
-&gpio5{
-gpio-ranges=<&omap3_pmx_core 128 32>;
+/*};*/
+/*&gpio5{*/
+/*gpio-ranges=<&omap3_pmx_core 128 32>;*/
 
-};
-&gpio6{
-gpio-ranges=<&omap3_pmx_core 160 32>;
+/*};*/
+/*&gpio6{*/
+/*gpio-ranges=<&omap3_pmx_core 160 32>;*/
 
-};
+/*};*/
 &watchdog_max{
 	gpios = <&gpio4 21 1>; //117
 
