--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -273,9 +273,10 @@ leds {
 
 
 &usb_otg_hs {
+	interface-type = <0>;
+	usb-phy = <&usb2_phy>;
 	phys = <&usb2_phy>;
 	phy-names = "usb2-phy";
-	interface-type = <0>;
 	mode = <1>;
 	power = <50>;
 };
