--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -273,9 +273,12 @@ leds {
 
 
 &usb_otg_hs {
+	num-eps = <16>;
+ 	ram-bits = <12>;
+ 	ctrl-module = <&omap_control_usb>;
 	interface-type = <0>;
-	usb-phy = <&usb0_phy>;
-	phys = <&usb0_phy>;
+	usb-phy = <&usb2_phy>;
+	phys = <&usb2_phy>;
 	phy-names = "usb2-phy";
 	mode = <1>;
 	power = <50>;
