--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -51,11 +51,11 @@
 		always-running;
 		hw_margin_ms = <900>;
 	};
-	usb2512b@2c {
-		compatible = "microchip,usb2517";
-//		reg = <0x2c>;
-		reset-gpios = <&gpio1 27 GPIO_ACTIVE_LOW>;
-	};
+/*	usb2512b@2c {*/
+/*		compatible = "microchip,usb2517";*/
+/*//		reg = <0x2c>;*/
+/*		reset-gpios = <&gpio1 27 GPIO_ACTIVE_LOW>;*/
+/*	};*/
 		hsusb1_phy: hsusb1_phy {
 		status = "disabled";
 	};
