--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -122,23 +122,23 @@ leds {
 
 		partition@0 {
 			label = "X-Loader";
-			reg = <0 0x80000>;
+			reg = <0 0x40000>;
 		};
-		partition@80000 {
+		partition@40000 {
 			label = "U-Boot";
-			reg = <0x80000 0x1e0000>;
+			reg = <0x40000 0xC0000>;
 		};
-		partition@1c0000 {
+		partition@c0000 {
 			label = "U-Boot Env";
-			reg = <0x260000 0x20000>;
+			reg = <0xc0000 0x100000>;
 		};
-		partition@280000 {
+		partition@100000 {
 			label = "Kernel";
-			reg = <0x280000 0x400000>;
+			reg = <0x100000 0x4c0000>;
 		};
-		partition@780000 {
+		partition@4c0000 {
 			label = "Filesystem";
-			reg = <0x680000 0xf980000>;
+			reg = <0x4c0000 0xf980000>;
 		};
 	};
 };
