--- a/arch/arm/configs/omap3_mws4_defconfig
+++ b/arch/arm/configs/omap3_mws4_defconfig
@@ -28,6 +28,7 @@ CONFIG_USB_OHCI_HCD_OMAP3=y
 CONFIG_USB_OMAP=y
 CONFIG_USB_SERIAL_CONSOLE=y
 CONFIG_USB_SERIAL_DEBUG=y
+CONFIG_NAND_BOOT=y
 CONFIG_USB_OTG_FSM=y
 CONFIG_MUSB_PIO_ONLY=y
 CONFIG_EXPERT=y
