--- a/arch/arm/boot/dts/omap3-mws4.dts
+++ b/arch/arm/boot/dts/omap3-mws4.dts
@@ -100,7 +100,7 @@ leds {
 		reg = <0 0 4		/* NAND I/O window, 4 bytes */
 		       255 0 0x02d4>;	/* GPMC register space */
 		interrupts = <20>;
-		ti,nand-ecc-opt = "bch4";
+		ti,nand-ecc-opt = "ham1";
 		nand-bus-width = <16>;
 		#address-cells = <1>;
 		#size-cells = <1>;
@@ -140,9 +140,9 @@ leds {
 			label = "Kernel";
 			reg = <0x140000 0xB40000>;
 		};
-		partition@B30000 {
+		partition@B40000 {
 			label = "Filesystem";
-			reg = <0xB40000 0xf4d0000>;
+			reg = <0xB40000 0xf4c0000>;
 		};
 	};
 };
